# popformer

./: .gitignore  README.md  collators.py  dataset-special.py  dataset.py  embeddings.py  explore.ipynb  finetune.py  finetune.sh  lai.py  lp-pu.py  lp.py  mask.txt  model.py  models.py  modules.py  pyproject.toml  requirements.txt  sweep-anc.py  sweep-general.py  sweep-ghist.py  sweep-realsel.py  sweep.py  test-fasternn.py  test-imp.py  test-reichx.py  test.py  test.txt  testft.py  train.py  train.sh  train_2d.py  train_linft.py  train_linprobe.py
IMP/: mask.py
analysis/: dataset-special.py  dataset_special.py  eval.py  selection_config.py  test-embeddings.py  test-imp.py  test-mlm.py  test_embeddings.py  test_imp.py  test_mlm.py  test_selection.py  test_selection_real.py  theme.py  train.py
analysis/evaluation/: core.py
analysis/scripts/: accessible.py  datasettoms.py  draw_pops.py  get_grossman_regions.py  get_reich_regions.py  ghist_submit.py  lift.py  linprobe.sh  mask.py  mergebed.py  oneoff_combine.py  oneoff_fasternn.py  processdiscpggan.py  processfasternn.py  processpan.py
analysis/train/: fasternn.py  finetune.py  (+4 more)
pg_gan/: discriminator.py  generator.py  global_vars.py  param_set.py  pg_gan.py  real_data_random.py  simulation.py  ss_extra.py  ss_helpers.py  util.py
popformer/: collators.py  dataset.py  models.py  modules.py  real_data_random.py  util.py
scripts/: data.sh  ftselbin.sh  ftselreg.sh  get_regiontest_regions.py  linprobe.sh  oneoff_combine.py  processdiscpggan.py  processfasternn.py  processnew.py  processpan.py  sc_numsnps.py  train.sh
(+13 files in other folders)
